--- a/myapplication/src/main/res/values/styles.xml
+++ b/myapplication/src/main/res/values/styles.xml
@@ -13,5 +13,12 @@
     </style>
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar"/>
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light"/>
-
+    <!-- Base application theme. -->
+    <style name="AppThemes" parent="Theme.AppCompat.Light.DarkActionBar">
+        <!-- Customize your theme here. -->
+    </style>
+    <style name="MyCustomTabLayout" parent="Widget.Design.TabLayout">
+        <item name="tabIndicatorColor">#008cff</item>
+        <item name="tabSelectedTextColor">#0037ff</item>
+    </style>
 </resources>
