--- a/myapplication/src/main/res/layout/fragment_page.xml
+++ b/myapplication/src/main/res/layout/fragment_page.xml
@@ -1,8 +1,8 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
-             tools:context=".fragment.PageFragment">
+    >
 
     <TextView
         android:id="@+id/tv"
@@ -10,4 +10,4 @@
         android:layout_height="match_parent"
         android:text="@string/hello_blank_fragment"/>
 
-</FrameLayout>
+</RelativeLayout>
