--- a/myapplication/src/main/res/layout/fragment_weal_item.xml
+++ b/myapplication/src/main/res/layout/fragment_weal_item.xml
@@ -1,11 +1,12 @@
 <android.support.v7.widget.CardView
+    android:id="@+id/card_view"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_margin="5dp"
+    android:layout_margin="10dp"
     android:orientation="horizontal"
-    card_view:cardCornerRadius="5dp"
+    card_view:cardCornerRadius="10dp"
     card_view:cardUseCompatPadding="true">
 
     <RelativeLayout
