--- a/myapplication/src/main/res/layout/fragment_weal_item.xml
+++ b/myapplication/src/main/res/layout/fragment_weal_item.xml
@@ -4,6 +4,9 @@
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_marginTop="10dp"
+    android:layout_marginLeft="5dp"
+    android:layout_marginRight="5dp"
     android:layout_margin="10dp"
     android:orientation="horizontal"
     card_view:cardCornerRadius="10dp"
