--- a/myapplication/src/main/res/layout/fragment_weal_item.xml
+++ b/myapplication/src/main/res/layout/fragment_weal_item.xml
@@ -4,10 +4,10 @@
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginTop="10dp"
+    android:layout_margin="10dp"
     android:layout_marginLeft="5dp"
     android:layout_marginRight="5dp"
-    android:layout_margin="10dp"
+    android:layout_marginTop="10dp"
     android:orientation="horizontal"
     card_view:cardCornerRadius="10dp"
     card_view:cardUseCompatPadding="true">
@@ -16,12 +16,19 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:background="@android:color/white">
-        <ImageView
-            android:id="@+id/tv"
+        <com.andexert.library.RippleView
+            android:id="@+id/more"
+            rv_centered="true"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:scaleType="fitXY"/>
+            >
+            <ImageView
+                android:id="@+id/tv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:scaleType="fitXY"/>
+        </com.andexert.library.RippleView>
     </RelativeLayout>
 
 </android.support.v7.widget.CardView>
