--- a/myapplication/src/main/res/layout/fragment_weal.xml
+++ b/myapplication/src/main/res/layout/fragment_weal.xml
@@ -9,11 +9,11 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-
         <android.support.v7.widget.RecyclerView
             android:id="@+id/my_recycler_view"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
+            android:layout_height="match_parent"
+            />
     </android.support.v4.widget.SwipeRefreshLayout>
 
 </RelativeLayout>
