--- a/myapplication/src/main/res/layout/fragment_weal_item.xml
+++ b/myapplication/src/main/res/layout/fragment_weal_item.xml
@@ -2,18 +2,14 @@
     android:id="@+id/card_view"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:layout_margin="10dp"
-    android:layout_marginLeft="5dp"
-    android:layout_marginRight="5dp"
-    android:layout_marginTop="10dp"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     android:orientation="horizontal"
     card_view:cardCornerRadius="10dp"
     card_view:cardUseCompatPadding="true">
 
     <RelativeLayout
-        android:layout_width="fill_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@android:color/white">
         <com.andexert.library.RippleView
