--- a/myapplication/src/main/res/layout/activity_count.xml
+++ b/myapplication/src/main/res/layout/activity_count.xml
@@ -52,5 +52,11 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/myProgressBar"/>
     </android.support.v4.widget.NestedScrollView>
-
+    <android.support.design.widget.FloatingActionButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_discuss"
+        app:backgroundTintMode="multiply"
+        app:layout_anchor="@id/appbar"
+        app:layout_anchorGravity="bottom|end|right"></android.support.design.widget.FloatingActionButton>
 </android.support.design.widget.CoordinatorLayout>
