--- a/myapplication/src/main/res/layout/fragment_hot_bas_fragment_imp.xml
+++ b/myapplication/src/main/res/layout/fragment_hot_bas_fragment_imp.xml
@@ -1,8 +1,8 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="suzhou.dataup.cn.myapplication.fragment.HotBasFragmentImp">
+             xmlns:tools="http://schemas.android.com/tools"
+             android:layout_width="match_parent"
+             android:layout_height="match_parent"
+             tools:context=".fragment.HotBasFragmentImpl">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
