--- a/myapplication/src/main/res/layout/activity_fullscreen.xml
+++ b/myapplication/src/main/res/layout/activity_fullscreen.xml
@@ -3,7 +3,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:background="#0099cc"
-                tools:context="suzhou.dataup.cn.myapplication.activity.FullscreenActivity">
+                tools:context=".ui.activity.FullscreenActivity">
 
     <ImageView
         android:id="@+id/im_bg"
