增加百度地图和对5.0的适配

--- a/myapplication/src/main/res/layout/layout_menu.xml
+++ b/myapplication/src/main/res/layout/layout_menu.xml
@@ -15,7 +15,7 @@
         <item
             android:id="@+id/nav_ver"
             android:icon="@drawable/ic_error_outline_black_36dp"
-            android:title="版本信息"/>
+            android:title="地图"/>
 
         <item
             android:id="@+id/nav_about"
